<resources>
    <string name="app_name">IDNP-Grupo01-Proyecto-Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">183251787312994</string>
    <string name="fb_login_protocol_scheme">fb183251787312994</string>
    <string name="facebook_application_id">183251787312994</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_nombre">Nombre:</string>
    <string name="hint_titulo">Titulo:</string>
    <string name="hint_fecha">Fecha:</string>
    <string name="hint_descripcion">Descripcion:</string>
    <string name="hint_img">Imagen:</string>
    <string name="hint_latitud">Latitud:</string>
    <string name="hint_longitud">Longitud:</string>


</resources>