<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <EditText
        android:id="@+id/editnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Fecha:"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_descripcion"
        android:inputType="textPersonName"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/editlongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_longitud"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editlatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_latitud"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <Button
        android:id="@+id/guardarregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:textSize="24sp" />
</LinearLayout>